--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -13,7 +13,7 @@
             WgateJs.ready=function(){
                 var wgateid=WgateJs.getWgateid();
                 alert(wgateid);
-                WgateJs.getWgateUser(function(user){console.info(user);alert(user)});
+                WgateJs.getWgateUser(function(user){console.info(user);alert(JSON.stringify(user))});
             }
             var u=(("https:" == document.location.protocol) ? "https" : "http") + "://st.weixingate.com/";
             u=u+'st/1947';//注意每个site这里的数字不一样
