--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -16,7 +16,7 @@
             WgateJs.ready=function(){
                 var wgateid=WgateJs.getWgateid();
                 //alert(wgateid);
-                $.post('login.lol',{user_id: wgateid,game_token:1},function(data){
+                $.post('/login.lol',{user_id: wgateid,game_token:1},function(data){
                     if(data.isexist){
                         username = data.username;
                             headimg = data.headimage;
@@ -28,7 +28,7 @@
                             wgateid=WgateJs.getWgateid();
                             WgateJs.getWgateUser(function(user){
                                 document.getElementById('headimg').src=headimg;
-                                $.post('create_user.lol',{user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl},function(data){
+                                $.post('/create_user.lol',{user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl},function(data){
                                     //if(data)
                                 })
                             })
