--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -36,7 +36,7 @@
 
                     }
                 })
-                WgateJs.getWgateUser(function(user){console.info(user);alert(user)});
+                //WgateJs.getWgateUser(function(user){console.info(user);alert(user)});
             }
             var u=(("https:" == document.location.protocol) ? "https" : "http") + "://st.weixingate.com/";
             u=u+'st/1947';//注意每个site这里的数字不一样
