--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -23,17 +23,7 @@
                             document.getElementById('headimg').src=headimg;
                             disable = data.disable;
                     }else{
-                        WgateJs.gate_options={force:1,info:"force"};
-                        WgateJs.ready=function(){
-                            wgateid=WgateJs.getWgateid();
-                            WgateJs.getWgateUser(function(user){
-                                document.getElementById('headimg').src=headimg;
-                                $.post('/create_user.lol',JSON.stringify({user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl}),function(data){
-                                    //if(data)
-                                })
-                            })
-                        }
-
+                        createUser();
                     }
                 })
                 //WgateJs.getWgateUser(function(user){console.info(user);alert(user)});
@@ -42,7 +32,22 @@
             u=u+'st/1947';//注意每个site这里的数字不一样
             var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
             g.defer=true; g.async=true; g.src=u; s.parentNode.insertBefore(g,s);
-        })();    
+        })(); 
+        function createUser(){
+        WgateJs = {};
+            WgateJs.auto_auth=true;
+            WgateJs.gate_options={force:1,info:"force"};
+            WgateJs.ready=function(){
+                wgateid=WgateJs.getWgateid();
+                            WgateJs.getWgateUser(function(user){
+                                document.getElementById('headimg').src=user.headimgurl;
+                                $.post('create_user.lol',{user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl},function(data){
+                                    //if(data)
+                                })
+                            })
+
+            }
+    }   
     </script>
 </head>
 <body>
