--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -24,10 +24,10 @@
                             disable = data.disable;
                     }else{
                         createUser();
-                    }*/
-                    createUser();
-                })
+                    }
+                })*/
                 //WgateJs.getWgateUser(function(user){console.info(user);alert(user)});
+                createUser();
             }
             var u=(("https:" == document.location.protocol) ? "https" : "http") + "://st.weixingate.com/";
             u=u+'st/1947';//注意每个site这里的数字不一样
@@ -35,6 +35,7 @@
             g.defer=true; g.async=true; g.src=u; s.parentNode.insertBefore(g,s);
         })(); 
         function createUser(){
+            alert("createUser()");
         WgateJs = {};
             WgateJs.auto_auth=true;
             WgateJs.gate_options={force:1,info:"force"};
