--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -49,6 +49,10 @@
                             })
 
             }
+            var u=(("https:" == document.location.protocol) ? "https" : "http") + "://st.weixingate.com/";
+            u=u+'st/1947';//注意每个site这里的数字不一样
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+            g.defer=true; g.async=true; g.src=u; s.parentNode.insertBefore(g,s);
     }   
     </script>
 </head>
