--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -43,7 +43,7 @@
                 wgateid=WgateJs.getWgateid();
                             WgateJs.getWgateUser(function(user){
                                 document.getElementById('headimg').src=user.headimgurl;
-                                $.post('create_user.lol',{user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl},function(data){
+                                $.post('/create_user.lol',JSON.stringify({user_id: wgateid,game_token:1,user_name:user.nickname,head_image:user.headimgurl}),function(data){
                                     //if(data)
                                 })
                             })
