--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -12,7 +12,7 @@
         (function() {
             WgateJs = {};
             WgateJs.auto_auth=true;
-            WgateJs.gate_options={force:1,info:"none"};
+            WgateJs.gate_options={force:1,info:"basic"};
             WgateJs.ready=function(){
                 var wgateid=WgateJs.getWgateid();
                 WgateJs.getWgateUser(function(user){alert(user)});
