--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -87,7 +87,7 @@
 this is the second Page: <span id="name"></span>
 <img id='headimg'/>
 <input type="text" id="score" />
-<button onclick="upScore">提交</button>
+<button onclick="upScore()">提交</button>
 </body>
 <script>
     /*var username;
