--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -73,7 +73,7 @@
     }   */
     function upScore(){
         var score = document.getElementById('score').value;
-        $.post('upload_score.lol',JSON.stringify({user_id:wgateidTag,game_token:1,score:score}),function(data){
+        $.post('/upload_score.lol',JSON.stringify({user_id:wgateidTag,game_token:1,score:score}),function(data){
             if(data.success){
                 alert('提交成功！');
             }else{
