--- a/gamerank/pages/views/second.html
+++ b/gamerank/pages/views/second.html
@@ -85,7 +85,7 @@
         alert('1111');
         $.get('/get_rank.lol',{user_id:wgateidTag,game_token:1},function(data){
             for(o in data){
-                $('#rankList').insertAfter('<div>'+o.user_name+'===='+o.rank+'</div>');
+                $('<div>'+o.user_name+'===='+o.rank+'</div>').insertAfter('#rankList');
             }
         })
     }
